# dissention

./: .gitignore  Makefile  README.md  make_rhetoric_scores.sh  pyproject.toml  slurm-9296812.out  slurm-9303414.out
dissent/: dataset.py  features.py  plots.py  rhetoric_analysis.py
dissent/analysis/: rhetoric_event_study.py  rhetoric_pajid_regression.py  rhetoric_trend_plot.py  rhetoric_trend_significance.py  seed_wordclouds.py  word2vec_semantic_corner.py
dissent/modeling/: calculate_rhetoric_colexification.py  calculate_rhetoric_scores.py  create_emi_dictionaries.py  create_rhetoric_dictionaries.py  create_seed_words.py  emi.py  emi_predict_colexification.py  expand_dictionaries.py  predict_word2vec.py  rhetoric_score.py  train.py  train_word2vec.py  w2v_predict.py  w2v_train.py  word2vec_predict.py  word2vec_train.py  wordscores_create_seed_words.py
dissent/plots/: rhetoric_event_study.py  rhetoric_pajid_regression.py  rhetoric_trend_plot.py  rhetoric_trend_significance.py  seed_wordclouds.py
dissent/scm/: dataset.py  nc_dissent_rates.py  robustness_checks.py
docs/: mkdocs.yml
docs/docs/: getting-started.md  index.md
references/: My Library.bib  bib.bib  primary.bib
references/chicago-note-bibliography.csl_files/: 40744-692cb6dd5313.js  6621735  74911-313e1ea8beda.js  82075-0a62077d7865.js  90618-3b106b9cf915.js  environment-4b1518f5fbee.js  sessions-980e43e5da6c.js  wp-runtime-1f2cc8d0dcae.js
reports/: Judicial Independence.bib  article.aux  article.md  article.tex
reports/references/: chicago-notes-bibliography-classic.csl  (+2 more)
scm/: compute_scm.R
(+14 files in other folders)
