[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dissent"
version = "0.0.1"
description = "Analyzing dissent in state supreme courts"
authors = [{ name = "Aerith Netzer" }]

readme = "README.md"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
  "datasets>=4.5.0",
  "gensim>=4.4.0",
  "kaleido>=1.2.0",
  "loguru",
  "mkdocs",
  "nltk>=3.9.2",
  "openpyxl",
  "pandas>=2.3.3",
  "plotly",
  "pandas-stubs>=2.3.2.250926",
  "pip",
  "python-dotenv",
  "ruff",
  "scikit-learn>=1.8.0",
  "scipy",
  "tqdm",
  "typer",
]
requires-python = "~=3.12.0"

[tool.ruff]
line-length = 99
src = ["dissent"]
include = ["pyproject.toml", "dissent/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"] # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["dissent"]
force-sort-within-sections = true

[tool.uv]
environments = [
    "python_full_version == '3.12.*' and platform_machine == 'x86_64'"
]
